# starter-sfml

./: CMakeLists.txt  README.md  main.cpp  run.sh
src/: engine.cpp  engine.hpp  font_manager.cpp  font_manager.hpp  game_session.cpp  game_session.hpp  keyboard.cpp  keyboard.hpp  non_copyable.hpp  particle_system.cpp  particle_system.hpp  texture_manager.cpp  texture_manager.hpp  tiles.cpp  tiles.hpp  utils.cpp  utils.hpp  vector_comparer.hpp
